apps/wireguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wireguard-ui
spec:
  selector:
    app: wireguard-ui
  ports:
    - name: ui
      port: 80
      targetPort: 5000
