apps/wireguard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wg-easy-route
spec:
  entryPoints:
    - websecure
  tls:
    secretName: wg-easy-tls
  routes:
    - match: Host(`wg.matiix310.dev`)
      kind: Rule
      services:
        - name: wg-easy
          port: 80
